--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,13 +1,16 @@
 {
   "manifest_version": 3,
   "version": "1.0.0",
-  "name": "global-pollution-detector",
-  "description": "A simple hello world!",
+  "name": "Overwritten Global Methods Detector",
+  "description": "Detect overwritten global JavaScript methods in web sites, for example, by polyfill libraries.",
   "permissions": [],
   "author": "Fuji Haruka",
+  "action": {
+    "default_popup": "popup.html"
+  },
   "web_accessible_resources": [
     {
-      "resources": ["injected.js"],
+      "resources": ["injected.js", "popup.js"],
       "matches": ["http://*/*", "https://*/*"]
     }
   ],
