--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "chrome-extension-global-pollution-detector",
+  "name": "chrome-extension-overwritten-globel-methods-detector",
   "version": "1.0.0",
   "private": true,
   "description": "",
   "scripts": {
     "format": "prettier --write extension",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pack": "zip -r extension.zip extension"
   },
   "author": "Fuji Haruka",
   "license": "MIT",
